--- a/home.html
+++ b/home.html
@@ -297,7 +297,7 @@
       <div id="transaction-parent" class="form max-w-lg mx-auto hidden">
         <div class="flex justify-between items-center">
           <p class="font-bold text-2xl py-[20px]">Transaction History</p>
-          <p class="text-[#08080880]">View All</p>
+          <button id="view-all" class="hover:bg-gray-200 cursor-pointer rounded-[40px] p-[10px] text-[#08080880]">View All</button>
         </div>
         <div id="transaction-container">
           
