--- a/index.html
+++ b/index.html
@@ -3,50 +3,165 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
-    <!-- daisy ui -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@5"
-      rel="stylesheet"
-      type="text/css"
-    />
-
-    <!-- tailwind css -->
+    <title>Payooo - Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body class="bg-[#f4f5f7] h-[100vh] flex flex-col justify-center items-center">
-    <div class="h-[150px] w-[350px] bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center">
-      <img src="./assets/Group.png" alt="">
-    </div>
-    <form class="rounded-[30px] w-[350px] bg-white">
-      <div class="flex flex-col p-5 ">
-        <label class="font-semibold" for="">Mobile Number</label>
-        <input
-          type="text"
-          placeholder="Enter your number" id="mobile-number"
-          class="input input-md bg-[#F4F5F7] p-[20px] rounded-[32px] my-[10px]"
-        />
-
-        <label class="font-semibold" for="">4 Digit Pin</label>
-        <input
-          type="text"
-          placeholder="Enter 4 Digit Pin" id="pin-number"
-          class="input input-md bg-[#F4F5F7] p-[20px] rounded-[32px] my-[10px]"
-        />
-
-        <button id="loginButton" class="btn bg-[#1A77F2] text-white border-[#005fd8] rounded-[32px] mt-[10px]">
-            <path
-              fill="white"
-              d="M8 12h5V8c0-6 4-7 11-6v5c-4 0-5 0-5 3v2h5l-1 6h-4v12h-6V18H8z"
-            ></path>
-          </svg>
-          Login
-        </button>
+  <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+    <div class="w-full max-w-md">
+      <!-- Header -->
+      <div class="text-center mb-8">
+        <img src="./assets/Group.png" alt="Payooo Logo" class="h-20 mx-auto mb-4">
+        <h1 class="text-3xl font-bold text-gray-800">Payooo</h1>
+        <p class="text-gray-600">Bank Payment System</p>
       </div>
-    </form>
 
-    <!-- js script -->
-     <script src="./script.js"></script>
+      <!-- Login Card -->
+      <div class="bg-white rounded-2xl shadow-lg p-6">
+        <h2 class="text-xl font-bold text-gray-800 mb-6 text-center">Login to Dashboard</h2>
+        
+        <!-- Mobile Input -->
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-medium mb-2">Mobile Number</label>
+          <input
+            type="text"
+            id="mobile-number"
+            placeholder="Enter 11-digit mobile number"
+            class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+            maxlength="11"
+            inputmode="numeric"
+          />
+        </div>
+
+        <!-- PIN Input -->
+        <div class="mb-6">
+          <label class="block text-gray-700 text-sm font-medium mb-2">4-Digit PIN</label>
+          <input
+            type="password"
+            id="pin-number"
+            placeholder="Enter 4-digit PIN"
+            class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+            maxlength="4"
+            inputmode="numeric"
+          />
+        </div>
+
+        <!-- Login Button -->
+        <button id="loginButton" class="w-full bg-blue-600 text-white font-medium py-3 rounded-lg hover:bg-blue-700 transition duration-200 shadow-md hover:shadow-lg">
+          Login Now
+        </button>
+
+        <!-- Demo Credentials -->
+        <div class="mt-8 pt-6 border-t border-gray-200">
+          <h3 class="text-sm font-semibold text-gray-700 mb-3">Demo Accounts (Use Exactly As Shown)</h3>
+          
+          <div class="space-y-3">
+            <!-- Navid -->
+            <div class="flex items-start p-3 bg-blue-50 rounded-lg">
+              <div class="bg-blue-100 text-blue-800 w-8 h-8 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                <span class="font-bold">N</span>
+              </div>
+              <div>
+                <p class="font-medium text-blue-800">Navid Hassan</p>
+                <p class="text-sm text-blue-700">
+                  <span class="font-mono">01778548640</span> | 
+                  <span class="font-mono">PIN: 2002</span>
+                </p>
+              </div>
+            </div>
+
+            <!-- Abrar -->
+            <div class="flex items-start p-3 bg-green-50 rounded-lg">
+              <div class="bg-green-100 text-green-800 w-8 h-8 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                <span class="font-bold">A</span>
+              </div>
+              <div>
+                <p class="font-medium text-green-800">Mohammed Abrar</p>
+                <p class="text-sm text-green-700">
+                  <span class="font-mono">01887664856</span> | 
+                  <span class="font-mono">PIN: 2004</span>
+                </p>
+              </div>
+            </div>
+
+            <!-- More Users -->
+            <details class="border border-gray-200 rounded-lg">
+              <summary class="p-3 cursor-pointer text-gray-700 font-medium">
+                More Demo Accounts
+              </summary>
+              <div class="p-3 pt-0 space-y-3">
+                <!-- Nishad -->
+                <div class="flex items-start p-3 bg-gray-50 rounded">
+                  <div class="bg-gray-200 text-gray-800 w-7 h-7 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                    <span class="font-bold text-sm">N</span>
+                  </div>
+                  <div>
+                    <p class="font-medium text-gray-800 text-sm">Nishad Ahamed</p>
+                    <p class="text-xs text-gray-700">
+                      <span class="font-mono">01742844817</span> | 
+                      <span class="font-mono">PIN: 2003</span>
+                    </p>
+                  </div>
+                </div>
+
+                <!-- Nazmul -->
+                <div class="flex items-start p-3 bg-gray-50 rounded">
+                  <div class="bg-gray-200 text-gray-800 w-7 h-7 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                    <span class="font-bold text-sm">N</span>
+                  </div>
+                  <div>
+                    <p class="font-medium text-gray-800 text-sm">Nazmul Hasan</p>
+                    <p class="text-xs text-gray-700">
+                      <span class="font-mono">01303587830</span> | 
+                      <span class="font-mono">PIN: 2005</span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </details>
+          </div>
+
+          <!-- Important Note -->
+          <div class="mt-4 p-3 bg-yellow-50 border border-yellow-200 rounded-lg">
+            <p class="text-sm text-yellow-800">
+              <span class="font-semibold">Note:</span> Enter mobile numbers 
+              <span class="font-mono">exactly as shown above</span> (with leading 0).
+            </p>
+          </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="mt-6 text-center">
+          <p class="text-xs text-gray-500">
+            Capstone Project 2 • Bank Payment System
+          </p>
+        </div>
+      </div>
+
+      <!-- Debug Button (Visible only in development) -->
+      <div class="mt-4 text-center">
+        <button onclick="window.debugLogin()" class="text-xs text-gray-500 hover:text-gray-700">
+          Debug Info (Check Console)
+        </button>
+        <span class="mx-2 text-gray-400">•</span>
+        <a href="./index.html?clear" class="text-xs text-red-500 hover:text-red-700">
+          Clear All Data
+        </a>
+      </div>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="./script.js"></script>
+
+    <!-- Clear localStorage helper -->
+    <script>
+      if (window.location.search.includes('clear')) {
+        localStorage.clear();
+        alert('✅ All data cleared! Refreshing page...');
+        setTimeout(() => {
+          window.location.href = './index.html';
+        }, 1000);
+      }
+    </script>
   </body>
 </html>
